fix token overflow;

--- a/src/ui/input/TokenSelect.js.css
+++ b/src/ui/input/TokenSelect.js.css
@@ -135,4 +135,5 @@ slot {
     color: var(--input-back-color, #ffffff);
     background-color: var(--input-text-color, #000000);
     border-radius: 4px;
+    overflow: hidden;
 }
